--- a/changelogs/v0.1.x.md
+++ b/changelogs/v0.1.x.md
@@ -1,3 +1,5 @@
++ v0.1.1b1 2026/01/24
+    + imdb信息获取方法，目前仅支持使用[omdb数据库](http://omdbapi.com/)
 + v0.1.1a1 2026/01/20
     + 第一个预发布版本
     + 移除了内置的调度器，用户需要自行使用`cron`或者其他工具来调度程序计划运行
