--- a/changelogs/v0.1.x.md
+++ b/changelogs/v0.1.x.md
@@ -1,3 +1,5 @@
++ v0.1.2a1 2026/01/26
+    + 增加了新的imdb获取方法`DirectFetcher`。可以直接从imdb网站爬取信息，且支持评分排序。
 + v0.1.1b1 2026/01/24
     + imdb信息获取方法，目前仅支持使用[omdb数据库](http://omdbapi.com/)
 + v0.1.1a1 2026/01/20
