--- a/changelogs/v0.1.x.md
+++ b/changelogs/v0.1.x.md
@@ -1,3 +1,5 @@
++ v0.1.3 2026/01/30
+    + 现在可以显示新的字段： 本季平均分、本季评分中位数和本季首播时间。
 + v0.1.2a1 2026/01/26
     + 增加了新的imdb获取方法`DirectFetcher`。可以直接从imdb网站爬取信息，且支持评分排序。
 + v0.1.1b1 2026/01/24
